--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ack-set-context-action",
-    "version": "0.1.3",
+    7"version": "0.1.3",
     "private": true,
     "main": "src/index.js",
     "scripts": {
